--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
                 <div id="established-at" class="ui black labels"></div>
                 <div class="ui black label"><i class="glasses icon"></i><span id="total-actions">0</span><div class="detail">PV</div></div>
             {%- elsif page.active_key == 'donate' -%}
-                <h2 class="ui inverted header">请为辛苦滴开发者众筹一杯星冰乐</h2>
+                <h2 class="ui inverted header">哎呀，这杯可乐好冻，继续撸代码</h2>
             {%- endif -%}
         </div>
     {%- endif -%}
