order changed，weixinmp add

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,9 @@
             <div class="right menu">
                 <a class="item" href="{{ site.repository_url }}" target="_blank"><i class="github icon"></i>GitHub</a>
             </div>
+            <div class="right menu">
+                <a class="item" href="{{ site.weixin_url }}" target="_blank"><i class="weixin icon"></i>GitHub</a>
+            </div>
         </div>
     </div>
     {%- if page.active_key == 'home' -%}
