--- a/_includes/search.html
+++ b/_includes/search.html
@@ -13,10 +13,10 @@
     <h1 class="ui inverted logo header">
         <img class="ui centered image" src="{{ site.logo_white }}" alt="Logo">
     </h1>
-    <h2 class="ui inverted header">{{ site.title }}</h2>
+    <!-- <h2 class="ui inverted header">{{ site.title }}</h2> -->
     <div class="ui inverted fluid left icon right action input" id="search-div">
         <i class="search icon"></i>
-        <input id="search-query" type="text" placeholder="立即搜索" autofocus="autofocus">
+        <input id="search-query" type="text" placeholder="搜索内容" autofocus="autofocus">
         <select id="search-services" class="ui compact selection dropdown">
             {% for item in site.data.search_services %}<option id="{{ item.id }}" value="{{ item.id }}" data-url="{{ item.url }}" data-suffix="{% if item.suffix %}{{ item.suffix }}{% endif %}" data-transcode-from="{% if item.transcode %}{{ item.transcode.from }}{% endif %}" data-transcode-to="{% if item.transcode %}{{ item.transcode.to }}{% endif %}">{{ item.name }}</option>{% endfor %}
         </select>
@@ -34,6 +34,6 @@
         <a id="live-visitors" class="loading-trigger" href="{{ '/analytics/' | relative_url }}"><img src="https://img.shields.io/badge/%E5%BD%93%E5%89%8D%E5%9C%A8%E7%BA%BF-loading-orange.svg" alt="Live Visitors"></a>
     </div>
     <div class="ui inverted selection link list">
-        <a class="item loading-trigger" href="{{ '/donate/' | relative_url }}">请为辛苦滴开发者众筹一杯星冰乐</a>
+        <a class="item loading-trigger" href="{{ '/donate/' | relative_url }}">一个有趣的灵魂在你</a>
     </div>
 </div>
