edit right menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,7 @@
             {% include menu_items.html %}
             <div class="right menu">
                 <a class="item" href="{{ site.repository_url }}" target="_blank"><i class="github icon"></i>GitHub</a>
-            </div>
-            <div class="right menu">
-                <a class="item" href="{{ site.csdn_url }}" target="_blank"><i class="csdn icon"></i>Blog</a>
+                <a class="item" href="{{ site.csdn_url }}" target="_blank"><i class="rss square icon"></i>Blog</a>
             </div>
         </div>
     </div>
